@@ -1,6 +1,7 @@
 - New Fixture: Shared tuition payment plan between curricular plans, check if payment plan is reachable, tuition conditions, tuition installments custom calculators
 - Improvement: Use default payment platform to Automatic rules and Academic services
 - Improvement: Add settlement note ERP certification date
+- Refactor: Refactor payment penalty from fenixedu-academic-treasury-base to fenixedu-treasury
 
 7.0.3 (10-05-2021)
 - Refactor: Replace discontinued PaymentCodePool by DigitalPaymentPlatform
